# bookstore

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/test/test_serializer/: __init__.py  test_order_serializer.py
order/test/test_viewset/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/test/test_serializer/: test_category_serializer.py
product/test/test_viewset/: test_product_viewset.py
product/viewsets/: product_viewset.py
serializers/: oder_serializer.py
